working with chains

--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -38,7 +38,8 @@
           <img src="/img/ic_fav.png" class="brand-adjust" alt="PMP"/>
         </a>
         <ul class="nav navbar-header navbar-nav col-xs-12 col-sm-6 col-md-6 col-lg-6">
-          <li><a href="#" ng-click="nav('/campaign')">Statistics</a></li>
+          <li><a href="#" ng-click="nav('/campaign')">Campaign statistics</a></li>
+          <li><a href="#" ng-click="nav('/chain')">Chained campaign statistics</a></li>
           <li><a href="https://twiki.cern.ch/twiki/bin/viewauth/CMS/PdmVpMp"
                  target="_blank">About</a></li>
         </ul>
