--- a/pmp/static/partials/campaign.html
+++ b/pmp/static/partials/campaign.html
@@ -11,8 +11,7 @@
          <div class="row">
            <div class="col-lg-11 col-md-11 col-sm-11 col-xs-11">
              <div class="input-group spacing">
-               <input ng-model="campaign" class="form-control" type="text"
-                      placeholder="Campaign Name">
+               <input ng-model="campaign" class="form-control" type="text">
                <span class="input-group-btn">
                  <button type="button" class="btn btn-danger"
                          ng-click="load(campaign, false)" ng-disabled="loadingData">
@@ -78,7 +77,8 @@
         </label>
         <br/>
         <label class="checkbox-inline col-lg-12 spacing">
-          <input type="checkbox" ng-model="chainMode" ng-change="modeUpdate()">
+          <input type="checkbox" ng-model="chainMode"
+                 ng-change="modeUpdate();setURL()" ng-disabled="isChainUrl">
           <small>
             New get_stats mode
           </small>
@@ -95,33 +95,33 @@
         <small class="text-uppercase col-lg-12">Filter by priority:</small>
         <div class="input-group">
           <select class="form-control text-center" ng-model="minPriority"
-                  ng-change="updateRequestData()">
+                  ng-change="updateRequestData();setURL()">
             <option ng-repeat="(key, value) in priorityPerBlock"
                     value="{{value}}">
               {{key}}
             </option>
           </select>
           <input type="text" class="form-control" placeholder="min"
-                 ng-model="minPriority" ng-change="updateRequestData()">
+                 ng-model="minPriority" ng-change="updateRequestData();setURL()">
           <div class="input-group-addon">
             &le; x &le;
           </div>
           <select class="form-control text-center" ng-model="maxPriority"
-                  ng-change="updateRequestData()">
+                  ng-change="updateRequestData();setURL()">
             <option ng-repeat="(key, value) in priorityPerBlock"
                     value="{{value}}">
               {{key}}
             </option>
           </select>
           <input type="text" class="form-control" placeholder="max"
-                 ng-model="maxPriority" ng-change="updateRequestData()">
+                 ng-model="maxPriority" ng-change="updateRequestData();setURL()">
         </div>
       </form>
       
       <small class="text-uppercase col-lg-12">Filter by status:</small>
       <div class="col-lg-6" ng-repeat="(key, status) in status">
         <label class="checkbox-inline">
-          <input type="checkbox" ng-model="status.selected" ng-change="updateRequestData()">
+          <input type="checkbox" ng-model="status.selected" ng-change="updateRequestData();setURL()">
           <small>{{key}}</small>
         </label>
       </div>
