--- a/pmp/static/css/pmp.css
+++ b/pmp/static/css/pmp.css
@@ -81,6 +81,10 @@ body.dragging, body.dragging * {
     display: none;
 }
 
+.padding-r {
+    padding-right: 0px;
+}
+
 .pointer {
     cursor: pointer;
 }
