string change chains -> chains and flows

--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -21,7 +21,7 @@
     <div class="col-lg-4">
       <a href="#" ng-click="nav('/chain')">
         <i class="fa fa-chain fa-spin fa-5x"></i>
-        <h3>Chains</h3>
+        <h3>Chains & Flows</h3>
       </a>
       <p>
         Get more complex representation of statistics based on chained campaigns and chained requests. Thus ignoring requests that does not belong to any chain.
