--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -75,7 +75,7 @@
         </div>
       </div>
       
-      <div ng-view ng-show="showview"></div>
+      <div ng-view ng-show="showView"></div>
     </div>
   </body>
 </html>
