--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -8,8 +8,8 @@
 </div>
 <div class="row text-center">
   <hr class="line"/>
-  <div class="col-lg-10 col-lg-offset-1">
-    <div class="col-lg-4">
+  <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1">
+    <div class="col-lg-4 col-md-4 col-sm-4">
       <a href="#" ng-click="nav('/campaign')">
         <i class="fa fa-bar-chart fa-5x"></i>
         <h3>Campaigns</h3>
@@ -18,7 +18,7 @@
         Get information about selected campaigns from McM database and view bare numbers for statuses of selected campaigns' requests.
       </p>
     </div>
-    <div class="col-lg-4">
+    <div class="col-lg-4 col-md-4 col-sm-4">
       <a href="#" ng-click="nav('/chain')">
         <i class="fa fa-chain fa-spin fa-5x"></i>
         <h3>Chains & Flows</h3>
@@ -27,7 +27,7 @@
         Get more complex representation of statistics based on chained campaigns and chained requests. Thus ignoring requests that does not belong to any chain.
       </p>
     </div>
-    <div class="col-lg-4">
+    <div class="col-lg-4 col-md-4 col-sm-4">
       <a href="https://twiki.cern.ch/twiki/bin/viewauth/CMS/PdmVpMp" target="_blank">
         <i class="fa fa-info fa-5x"></i>
         <h3>About</h3>
