--- a/pmp/static/partials/campaign.html
+++ b/pmp/static/partials/campaign.html
@@ -9,7 +9,7 @@
      <div class="row">
        <div class="well spacing">
          <div class="row">
-           <div class="col-lg-11 col-md-11 col-sm-11 col-xs-11">
+           <div class="col-lg-11 col-md-11 col-sm-10 col-xs-11">
              <div class="input-group spacing">
                <input ng-model="campaign" class="form-control" type="text">
                <span class="input-group-btn">
@@ -28,7 +28,7 @@
                </span>
              </div>
            </div>
-           <div class="col-lg-1" ng-show="loadingData">
+           <div class="col-lg-1 col-md-1 col-sm-2" ng-show="loadingData">
              <i class="fa fa-spinner fa-spin fa-3x"></i>
            </div>
          </div>
@@ -61,15 +61,15 @@
   <div class="col-lg-3 col-md-3 col-sm-3">
     <a class="btn btn-sm text-uppercase padding-r" data-toggle="collapse" data-target="#filter">
       <i class="fa fa-eyedropper"></i>
-      <small> Filter</small>
+      <small class="hidden-sm"> Filter</small>
     </a>
     <a class="btn btn-sm text-uppercase padding-r" data-toggle="collapse" data-target="#advanced">
       <i class="fa fa-cog"></i>
-      <small> Advanced</small>
+      <small class="hidden-sm"> Advanced</small>
     </a>
     <a class="btn btn-sm text-uppercase" data-toggle="collapse" data-target="#share">
       <i class="fa fa-share"></i>
-      <small> Share</small>
+      <small class="hidden-sm"> Share</small>
     </a>
     
     <div id="filter" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 spacing">
@@ -78,9 +78,9 @@
       </div>
       <div ng-show="cachedRequestData.length">
         <form class="form-group form-inline form-group-sm">
-          <small class="text-uppercase col-lg-12">Filter by priority:</small>
-          <div class="input-group">
-            <select class="form-control text-center" ng-model="filterPriority[0]"
+          <small class="text-uppercase col-sm-12 col-md-12 col-lg-12">Priority filter</small>
+          <div class="input-group col-sm-12">
+            <select class="form-control text-center col-sm-5" ng-model="filterPriority[0]"
                     ng-change="updateRequestData();setURL()">
               <option ng-repeat="(key, value) in priorityPerBlock"
                       value="{{value}}">
@@ -105,9 +105,9 @@
         </form>
         
         <form class="form-group form-inline form-group-sm spacing">
-          <small class="text-uppercase col-lg-12">Filter by status:</small>
+          <small class="text-uppercase col-sm-12 col-md-12 col-lg-12">Status filter</small>
           <div class="input-group">
-            <div class="col-lg-6" ng-repeat="(key, status) in status">
+            <div class="col-lg-6 col-md-6 col-sm-12" ng-repeat="(key, status) in status">
               <label class="checkbox-inline">
                 <input type="checkbox" ng-model="status.selected" 
                        ng-change="updateRequestData();setURL()">
@@ -118,8 +118,8 @@
         </form>
         
         <form class="form-group form-inline form-group-sm">
-          <small class="text-uppercase col-lg-12">Filter by PWG:</small>
-          <div class="col-lg-4" ng-repeat="(key, status) in pwg">
+          <small class="text-uppercase col-sm-12 col-md-12 col-lg-12">PWG filter</small>
+          <div class="col-sm-6 col-md-4 col-lg-4" ng-repeat="(key, status) in pwg">
             <label class="checkbox-inline">
               <input type="checkbox" ng-model="status.selected"
                      ng-change="updateRequestData();setURL()">
@@ -134,23 +134,23 @@
 
     <div id="advanced" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 spacing">
       <form class="form-group text-uppercase">
-        <label class="checkbox-inline col-lg-12">
+        <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12">
           <input type="checkbox" ng-model="showDate" ng-change="setURL()">
           <small>
-            Show current time
+            Show time
           </small>
         </label>
         <br/>
-        <label class="checkbox-inline col-lg-12 spacing">
+        <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12 spacing">
           <input type="checkbox" ng-model="chainMode"
                  ng-change="modeUpdate();setURL()" ng-disabled="isChainUrl">
           <small>
-            New get_stats mode
+            get_stats mode
           </small>
         </label>
       </form>
       
-      <button type="button" class="btn btn-sm btn-default text-center col-lg-12 spacing"
+      <button type="button" class="btn btn-sm btn-default text-center col-lg-12 col-md-12 col-sm-12 spacing"
               ng-click="takeScreenshot()" ng-disabled="false">
         <i class="fa fa-camera"></i>
         Take screenshot
