--- a/pmp/static/partials/campaign.html
+++ b/pmp/static/partials/campaign.html
@@ -9,9 +9,13 @@
      <div class="row">
        <div class="well spacing">
          <div class="row">
-           <div class="col-lg-11 col-md-11 col-sm-10 col-xs-11">
+           <div class="col-lg-11 col-md-11 col-sm-10 col-xs-11" ng-controller="TypeaheadCtrl">
              <div class="input-group spacing">
-               <input ng-model="campaign" class="form-control" type="text">
+
+               <input type="text" ng-model="campaign" ng-change="getSuggestions()"
+                      typeahead="s for s in suggestions | filter:$viewValue | limitTo:8"
+                      class="form-control" autocomplete="off"
+                      placeholder="Start typing something to search...">
                <span class="input-group-btn">
                  <button type="button" class="btn btn-danger"
                          ng-click="load(campaign, false)" ng-disabled="loadingData">
