--- a/pmp/static/partials/campaign.html
+++ b/pmp/static/partials/campaign.html
@@ -154,7 +154,8 @@
         </label>
       </form>
       
-      <button type="button" class="btn btn-sm btn-default text-center col-lg-12 col-md-12 col-sm-12 spacing"
+      <button type="button" ng-show="allRequestData.length"
+              class="btn btn-sm btn-default text-center col-lg-12 col-md-12 col-sm-12 spacing"
               ng-click="takeScreenshot()" ng-disabled="false">
         <i class="fa fa-camera"></i>
         Take screenshot
