--- a/pmp/static/partials/lifetime.html
+++ b/pmp/static/partials/lifetime.html
@@ -1,1 +1,167 @@
-Hello Lifetime!
+<div class="row spacing" ng-init="init()">
+  <div class="col-lg-9 col-md-9 col-sm-9">
+   <div class="row">
+     <div class="row">
+       <h1 class="pull-right white">
+         <strong>{{title}}</strong>
+       </h1>
+     </div>
+     <div class="row">
+       <div class="well spacing">
+         <div class="row">
+           <div class="col-lg-11 col-md-11 col-sm-10 col-xs-11" ng-controller="TypeaheadCtrl">
+             <div class="input-group spacing">
+
+               <input type="text" ng-model="request" ng-change="getSuggestions()"
+                      typeahead="s for s in suggestions | filter:$viewValue | limitTo:8"
+                      class="form-control" autocomplete="off"
+                      placeholder="Start typing something to search...">
+               <span class="input-group-btn">
+                 <button type="button" class="btn btn-danger"
+                         ng-click="load(request, false)" ng-disabled="loadingData">
+                   See
+                 </button>
+                 <button type="button" class="btn btn-danger"
+                         ng-click="load(request, true)" ng-disabled="loadingData">
+                   Append
+                 </button>
+               </span>
+             </div>
+           </div>
+           <div class="col-lg-1 col-md-1 col-sm-2" ng-show="loadingData">
+             <i class="fa fa-spinner fa-spin fa-3x"></i>
+           </div>
+         </div>
+       </div>
+     </div>
+
+     <div class="row">
+       <div class="panel"
+            ng-init="updateDate()" ng-show="showDate">
+         <div class="panel-body">
+           Current time:
+           <strong>
+             {{dt | date:"d MMMM y H:mm"}}
+           </strong>
+           {{dt | date: "'GMT': Z"}}
+         </div>
+       </div>
+     </div>
+
+   </div>
+  </div>
+
+  <div class="col-lg-3 col-md-3 col-sm-3">
+    <a class="btn btn-sm text-uppercase padding-r" data-toggle="collapse" data-target="#filter">
+      <i class="fa fa-eyedropper"></i>
+      <small class="hidden-sm"> Filter</small>
+    </a>
+    <a class="btn btn-sm text-uppercase padding-r" data-toggle="collapse" data-target="#advanced">
+      <i class="fa fa-cog"></i>
+      <small class="hidden-sm"> Advanced</small>
+    </a>
+    <a class="btn btn-sm text-uppercase" data-toggle="collapse" data-target="#share">
+      <i class="fa fa-share"></i>
+      <small class="hidden-sm"> Share</small>
+    </a>
+    
+    <div id="filter" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 spacing">
+      <div ng-show="!cachedRequestData.length">
+        <small>No data to filter</small>
+      </div>
+      <div ng-show="cachedRequestData.length">
+        <form class="form-group form-inline form-group-sm">
+          <small class="text-uppercase col-sm-12 col-md-12 col-lg-12">Priority filter</small>
+          <div class="input-group col-sm-12">
+            <select class="form-control text-center" ng-model="filterPriority[0]"
+                    ng-change="updateRequestData();setURL()">
+              <option ng-repeat="(key, value) in priorityPerBlock"
+                      value="{{value}}">
+                {{key}}
+              </option>
+            </select>
+            <input type="text" class="form-control" placeholder="min"
+                   ng-model="filterPriority[0]" ng-change="updateRequestData();setURL()">
+            <div class="input-group-addon">
+              &le; x &le;
+            </div>
+            <select class="form-control text-center" ng-model="filterPriority[1]"
+                    ng-change="updateRequestData();setURL()">
+              <option ng-repeat="(key, value) in priorityPerBlock"
+                      value="{{value}}">
+                {{key}}
+              </option>
+            </select>
+            <input type="text" class="form-control" placeholder="max"
+                   ng-model="filterPriority[1]" ng-change="updateRequestData();setURL()">
+          </div>
+        </form>
+        
+        <form class="form-group form-inline form-group-sm spacing">
+          <small class="text-uppercase col-sm-12 col-md-12 col-lg-12">Status filter</small>
+          <div class="input-group">
+            <div class="col-lg-6 col-md-6 col-sm-12" ng-repeat="(key, status) in status">
+              <label class="checkbox-inline">
+                <input type="checkbox" ng-model="status.selected" 
+                       ng-change="updateRequestData();setURL()">
+                <small>{{key}}</small>
+              </label>
+            </div>
+          </div>
+        </form>
+        
+        <form class="form-group form-inline form-group-sm">
+          <small class="text-uppercase col-sm-12 col-md-12 col-lg-12">PWG filter</small>
+          <div class="col-sm-6 col-md-4 col-lg-4" ng-repeat="(key, status) in pwg">
+            <label class="checkbox-inline">
+              <input type="checkbox" ng-model="status.selected"
+                     ng-change="updateRequestData();setURL()">
+              <small>
+                {{key}}
+              </small>
+            </label>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div id="advanced" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 spacing">
+      <form class="form-group text-uppercase">
+        <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12">
+          <input type="checkbox" ng-model="showDate" ng-change="setURL()">
+          <small>
+            Show time
+          </small>
+        </label>
+      </form>
+      
+      <button type="button" ng-show="allRequestData.length"
+              class="btn btn-sm btn-default text-center col-lg-12 col-md-12 col-sm-12 spacing"
+              ng-click="takeScreenshot()" ng-disabled="false">
+        <i class="fa fa-camera"></i>
+        Take screenshot
+      </button>
+    </div>
+    
+    <div id="share" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="input-group input-group-sm">
+        <span class="hidden-sm input-group-addon text-uppercase" ng-click="setURL()">
+          Share
+        </span>
+        <input id="url" type="text" class="form-control" ng-model="url"
+               placeholder="Refresh to get URL">
+        <span id="copy" data-clipboard-text="{{url}}" class="input-group-addon pointer">
+          <i class="fa fa-copy"></i>
+        </span>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row" ng-show="allRequestData.length">
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+
+    <lifetime-graph></lifetime-graph>
+    
+  </div>
+</div>
