--- a/pmp/static/partials/lifetime.html
+++ b/pmp/static/partials/lifetime.html
@@ -160,67 +160,6 @@
 
 <div class="row" ng-show="true">
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-    <div id="graph"></div>
-    <lifetime-graph></lifetime-graph>
-    
+    <linear-lifetime chart-data="allRequestData"></linear-lifetime>
   </div>
 </div>
-
-
-<script>
-      var mDummyData = [
-      [1335035400000, 100, 90],
-      [1335135400000, 0, 0],
-      [1335294600000, 100, 10]
-      ];
-
-      var m = [20, 40, 20, 40]; // margins
-      var w = 1000 - m[1] - m[3]; // width
-      var h = 400 - m[0] - m[2]; // height
-		
-      var startTime = new Date(d3.min(mDummyData, function(d) {return d[0];}));
-      var endTime = new Date(d3.max(mDummyData, function(d) {return d[0];}));
-      
-      var x = d3.time.scale().domain([startTime, endTime]).range([0, w]);
-      x.tickFormat(d3.time.format("%Y-%m-%d"));
-      var y = d3.scale.linear().domain([0, d3.max(mDummyData, function(d) { return d[1]; })]).range([h, 0]);
-      
-      var line1 = d3.svg.line()
-      .x(function(d,i) { 
-      return x(d[0]);
-      })
-      .y(function(d) { 
-      return y(d[1]);
-      })
-
-      var line2 = d3.svg.line()
-      .x(function(d,i) { 
-      return x(d[0]);
-      })
-      .y(function(d) { 
-      return y(d[2]);
-      })
-      
-      var graph = d3.select("#graph").append("svg:svg")
-      .attr("width", w + m[1] + m[3])
-      .attr("height", h + m[0] + m[2])
-      .append("svg:g")
-      .attr("transform", "translate(" + m[3] + "," + m[0] + ")");
-      
-      var xAxis = d3.svg.axis().scale(x).tickSize(-h).tickSubdivide(1);
-      
-      graph.append("svg:g")
-      .attr("class", "x axis")
-      .attr("transform", "translate(0," + h + ")")
-      .call(xAxis);
-      
-      var yAxisLeft = d3.svg.axis().scale(y).ticks(6).orient("left");
-      graph.append("svg:g")
-      .attr("class", "y axis")
-      .attr("transform", "translate(-10,0)")
-      .call(yAxisLeft);
-      
-      graph.append("svg:path").attr("d", line1(mDummyData)).attr("class", "data1");
-      graph.append("svg:path").attr("d", line2(mDummyData)).attr("class", "data2");
-
-</script>
