--- a/pmp/static/partials/lifetime.html
+++ b/pmp/static/partials/lifetime.html
@@ -12,17 +12,17 @@
            <div class="col-lg-11 col-md-11 col-sm-10 col-xs-11" ng-controller="TypeaheadCtrl">
              <div class="input-group spacing">
 
-               <input type="text" ng-model="request" ng-change="getSuggestions()"
+               <input type="text" ng-model="lifetime" ng-change="getSuggestions()"
                       typeahead="s for s in suggestions | filter:$viewValue | limitTo:8"
                       class="form-control" autocomplete="off"
                       placeholder="Start typing something to search...">
                <span class="input-group-btn">
                  <button type="button" class="btn btn-danger"
-                         ng-click="load(request, false)" ng-disabled="loadingData">
+                         ng-click="load(lifetime, false)" ng-disabled="loadingData">
                    See
                  </button>
                  <button type="button" class="btn btn-danger"
-                         ng-click="load(request, true)" ng-disabled="loadingData">
+                         ng-click="load(lifetime, true)" ng-disabled="loadingData">
                    Append
                  </button>
                </span>
