init with no data

--- a/pmp/static/partials/lifetime.html
+++ b/pmp/static/partials/lifetime.html
@@ -158,7 +158,7 @@
   </div>
 </div>
 
-<div class="row" ng-show="true">
+<div class="row" ng-show="allRequestData.length">
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
     <linear-lifetime chart-data="allRequestData"></linear-lifetime>
   </div>
