changed index and top menu

--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -40,6 +40,9 @@
         <ul class="nav navbar-header navbar-nav col-xs-12 col-sm-11 col-md-11 col-lg-11">
           <li><a href="#" ng-click="nav('/campaign')">Campaign Statistics</a></li>
           <li><a href="#" ng-click="nav('/chain')">Chains and Flows Statistics</a></li>
+          <li><a href="#" ng-click="nav('/lifetime')">Life-Time Statistics</a></li>
+          <li><a href="https://github.com/cms-PdmV/pmp/issues"
+                 target="_blank">Report</a></li>
           <li><a href="https://twiki.cern.ch/twiki/bin/viewauth/CMS/PdmVpMp"
                  target="_blank">About</a></li>
         </ul>
