--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -45,7 +45,7 @@
   <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1">
 
     <div class="col-lg-4 col-lg-offset-2 col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2">
-      <a href="https://twiki.cern.ch/twiki/bin/viewauth/CMS/PdmVpMp" target="_blank">
+      <a href="https://github.com/cms-PdmV/pmp/issues" target="_blank">
         <i class="fa fa-github fa-5x"></i>
         <h3>Report</h3>
       </a>
