datelabel fix pt2

--- a/pmp/static/partials/lifetime.html
+++ b/pmp/static/partials/lifetime.html
@@ -159,7 +159,7 @@
 </div>
 
 <div class="row" ng-show="allRequestData.length">
-  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center" id="measure">
     <linear-lifetime chart-data="allRequestData"></linear-lifetime>
   </div>
 </div>
