added tags in lifetime

--- a/pmp/static/partials/lifetime.html
+++ b/pmp/static/partials/lifetime.html
@@ -35,6 +35,14 @@
        </div>
      </div>
 
+     <div class="row" ng-hide="chainMode">
+       <div class="panel-default">
+         <div class="panel-body">
+           <div id="campaignList" style="padding-bottom: 0px;"></div>
+         </div>
+       </div>
+     </div>
+
      <div class="row">
        <div class="panel" ng-init="updateDate()" ng-show="showDate">
          <div class="panel-body">
